syntax = "proto2";
package douyin.idl.video;
option go_package = "video/";

service VideoService{
  // 查找视频
  rpc GetVideoInfo(douyin_video_request) returns(douyin_video_response);
  // 更新视频评论
  rpc UpdateCommentCount(douyin_comment_count_request) returns(douyin_comment_count_response);
  // 更新视频点赞
  rpc UpdateFavoriteCount(douyin_favorite_count_request) returns(douyin_favorite_count_response);
  // 视频流
  rpc Feed(douyin_feed_request) returns(douyin_feed_response);
  // 视频投稿
  rpc PublishAction(douyin_publish_action_request) returns(douyin_publish_action_response);
  // 视频列表
  rpc PublishList(douyin_publish_list_request) returns(douyin_publish_list_response);
}

// 更新视频评论
message douyin_comment_count_request{
  required int64 video_id = 1;
  required int32 action_type = 2;
}

message douyin_comment_count_response{
  required int32 status_code = 1; // 状态码，0-成功，其他值-失败
  optional string status_msg = 2; // 返回状态描述
}

// 更新视频点赞
message douyin_favorite_count_request{
  required int64 video_id = 1;
  required int32 action_type = 2;
}

message douyin_favorite_count_response{
  required int32 status_code = 1; // 状态码，0-成功，其他值-失败
  optional string status_msg = 2; // 返回状态描述
}

// 查找视频
message douyin_video_request{
  required int64 video_id = 1;
}

message douyin_video_response{
  required int32 status_code = 1; // 状态码，0-成功，其他值-失败
  optional string status_msg = 2; // 返回状态描述
  optional Video video = 3;
}

// 视频流
message douyin_feed_request {
  optional int64 latest_time = 1; // 可选参数，限制返回视频的最新投稿时间戳，精确到秒，不填表示当前时间
  optional int64 user_id = 2; // 可选参数，登录用户设置
}

message douyin_feed_response {
  required int32 status_code = 1; // 状态码，0-成功，其他值-失败
  optional string status_msg = 2; // 返回状态描述
  repeated Video video_list = 3; // 视频列表
  optional int64 next_time = 4; // 本次返回的视频中，发布最早的时间，作为下次请求时的latest_time
}

// 视频投稿
message douyin_publish_action_request {
  required int64 user_id = 1; // 用户id
  required string title = 2; // 视频标题
  required string fileExt = 3;
}

message douyin_publish_action_response {
  required int32 status_code = 1; // 状态码，0-成功，其他值-失败
  optional string status_msg = 2; // 返回状态描述
}

// 视频列表
message douyin_publish_list_request {
  required int64 query_id = 1;
  required int64 host_id = 2;
}

message douyin_publish_list_response {
  required int32 status_code = 1; // 状态码，0-成功，其他值-失败
  optional string status_msg = 2; // 返回状态描述
  repeated Video video_list = 3; // 用户发布的视频列表
}

message Video {
  required int64 id = 1; // 视频唯一标识
  required User author = 2; // 视频作者信息
  required string play_url = 3; // 视频播放地址
  required string cover_url = 4; // 视频封面地址
  required int64 favorite_count = 5; // 视频的点赞总数
  required int64 comment_count = 6; // 视频的评论总数
  required bool is_favorite = 7; // true-已点赞，false-未点赞
  required string title = 8; // 视频标题
}

message User {
  required int64 id = 1; // 用户id
  required string name = 2; // 用户名称
  optional int64 follow_count = 3; // 关注总数
  optional int64 follower_count = 4; // 粉丝总数
  required bool is_follow = 5; // true-已关注，false-未关注
  optional string avatar = 6; //用户头像
  optional string background_image = 7; //用户个人页顶部大图
  optional string signature = 8; //个人简介
  optional int64 total_favorited = 9; //获赞数量
  optional int64 work_count = 10; //作品数量
  optional int64 favorite_count = 11; //点赞数量
}
